tests/snapshots/snapshots__budget_vaul_src_1000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 1000 (988 tokens)

browser.ts

constants.ts
     1→export const TRANSITIONS …
     6→export const VELOCITY_THRESHOLD …
     8→export const CLOSE_THRESHOLD …
    10→export const SCROLL_LOCK_TIMEOUT …
    12→export const BORDER_RADIUS …
    14→export const NESTED_DISPLACEMENT …
    16→export const WINDOW_TOP_OFFSET …
    18→export const DRAG_CLASS …

context.ts
     4→interface DrawerContextValue {
    37→export const DrawerContext …

helpers.ts
     3→interface Style {
   105→/**
   106→ * Receives functions as arguments and returns a new function that calls all.
   107→ */
   108→export function chain<T>(...fns: T[]) {

index.tsx
     3→import * as DialogPrimitive from '@radix-ui/react-dialog';
     4→import React from 'react';
    27→export interface WithFadeFromProps {
    28→  /**
      →  …
    40→export interface WithoutFadeFromProps {
    41→  /**
      →  …
    50→export type DialogProps = {
   139→export function Root …
   803→export const Overlay = React.forwardRef<HTMLDivElement, React.ComponentPropsWithoutRef<typeof DialogPrimitive.Overlay>>(
   831→export type ContentProps = React.ComponentPropsWithoutRef<typeof DialogPrimitive.Content>;
   833→export const Content = React.forwardRef<HTMLDivElement, ContentProps>(function (
   989→export type HandleProps = React.ComponentPropsWithoutRef<'div'> & {
   993→const LONG_HANDLE_PRESS_TIMEOUT = 250;
   994→const DOUBLE_TAP_TIMEOUT = 120;
   996→export const Handle = React.forwardRef<HTMLDivElement, HandleProps>(function (
  1098→export function NestedRoot …
  1128→type PortalProps = React.ComponentPropsWithoutRef<typeof DialogPrimitive.Portal>;
  1130→export function Portal …
  1137→export const Drawer = {

types.ts
     1→export type DrawerDirection …
     2→export interface SnapPoint {
     3→  fraction: number;
     4→  height: number;
     5→}
     7→export type AnyFunction …

use-composed-refs.ts
     7→/**
      →…
    11→function setRef<T>(ref: PossibleRef<T>, value: T) {
    19→/**
      →…
    23→function composeRefs<T>(...refs: PossibleRef<T>[]) {
    27→/**
      →…
    31→function useComposedRefs<T>(...refs: PossibleRef<T>[]) {

use-controllable-state.ts

use-position-fixed.ts
     6→/**
     7→ * This hook is necessary to prevent buggy behavior on iOS devices (need to test on Android).
     8→ * I won't get into too much detail about what bugs it solves, but so far I've found that setting the body to `position: fixed` is the most reliable way to prevent those bugs.
     9→ * Issues that this hook solves:
    10→ * https://github.com/emilkowalski/vaul/issues/435
    11→ * https://github.com/emilkowalski/vaul/issues/433
    12→ * And more that I discovered, but were just not reported.
    13→ */
    14→
    15→export function usePositionFixed({
    16→  isOpen,
    17→  modal,
    18→  nested,
    19→  hasBeenOpened,
    20→  preventScrollRestoration,
    21→  noBodyStyles,
    22→}: {
    23→  isOpen: boolean;
    24→  modal: boolean;
    25→  nested: boolean;
    26→  hasBeenOpened: boolean;
    27→  preventScrollRestoration: boolean;
    28→  noBodyStyles: boolean;
    29→}) {

use-prevent-scroll.ts
     8→export const useIsomorphicLayoutEffect …
    10→interface PreventScrollOptions {
    63→/**
    64→ * Prevents scrolling on the document body on mount, and
    65→ * restores it on unmount. Also ensures that content does not
    66→ * shift due to the scrollbars disappearing.
    67→ */
    68→export function usePreventScroll(options: PreventScrollOptions = {}) {

use-scale-background.ts

use-snap-points.ts
