tests/snapshots/snapshots__budget_vaul_src_2000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 2000 (2018 tokens)

browser.ts
     1→export function isMobileFirefox(): boolean | undefined {
    10→export function isMac(): boolean | undefined {
    14→export function isIPhone(): boolean | undefined {
    18→export function isSafari(): boolean | undefined {
    22→export function isIPad(): boolean | undefined {
    30→export function isIOS(): boolean | undefined {
    34→export function testPlatform(re: RegExp): boolean | undefined {

constants.ts
     1→export const TRANSITIONS = {
     6→export const VELOCITY_THRESHOLD = 0.4;
     8→export const CLOSE_THRESHOLD = 0.25;
    10→export const SCROLL_LOCK_TIMEOUT = 100;
    12→export const BORDER_RADIUS = 8;
    14→export const NESTED_DISPLACEMENT = 16;
    16→export const WINDOW_TOP_OFFSET = 26;
    18→export const DRAG_CLASS = 'vaul-dragging';

context.ts
     1→import React from 'react';
     2→import { DrawerDirection } from './types';
     4→interface DrawerContextValue {
     5→  drawerRef: React.RefObject<HTMLDivElement>;
      →  …
    37→export const DrawerContext = React.createContext<DrawerContextValue>({
    69→export const useDrawerContext = () => {
    70→  const context = React.useContext(DrawerContext);
    71→  if (!context) {
      →  …

helpers.ts
     1→import { AnyFunction, DrawerDirection } from './types';
     3→interface Style {
     4→  [key: string]: string;
     5→}
     7→const cache = new WeakMap();
     9→export function isInView …
    23→export function set …
    42→export function reset …
    59→export const isVertical …
    72→export function getTranslate …
    90→export function dampenValue …
    94→export function assignStyle …
   106→ * Receives functions as arguments and returns a new function that calls all.
   108→export function chain<T>(...fns: T[]) {
   109→  return (...args: T extends AnyFunction ? Parameters<T> : never) => {
   110→    for (const fn of fns) {
   111→      if (typeof fn === 'function') {
   112→        // @ts-ignore
   113→        fn(...args);
   114→      }
   115→    }
   116→  };
   117→}

index.tsx
     3→import * as DialogPrimitive from '@radix-ui/react-dialog';
     4→import React from 'react';
    27→export interface WithFadeFromProps {
    28→  /**
      →  …
    40→export interface WithoutFadeFromProps {
    41→  /**
      →  …
    50→export type DialogProps = {
   139→export function Root …
   803→export const Overlay = React.forwardRef<HTMLDivElement, React.ComponentPropsWithoutRef<typeof DialogPrimitive.Overlay>>(
   831→export type ContentProps = React.ComponentPropsWithoutRef<typeof DialogPrimitive.Content>;
   833→export const Content = React.forwardRef<HTMLDivElement, ContentProps>(function (
   989→export type HandleProps = React.ComponentPropsWithoutRef<'div'> & {
   993→const LONG_HANDLE_PRESS_TIMEOUT = 250;
   994→const DOUBLE_TAP_TIMEOUT = 120;
   996→export const Handle = React.forwardRef<HTMLDivElement, HandleProps>(function (
  1098→export function NestedRoot …
  1128→type PortalProps = React.ComponentPropsWithoutRef<typeof DialogPrimitive.Portal>;
  1130→export function Portal …
  1137→export const Drawer = {

types.ts
     1→export type DrawerDirection = 'top' | 'bottom' | 'left' | 'right';
     2→export interface SnapPoint {
     3→  fraction: number;
     4→  height: number;
     5→}
     7→export type AnyFunction = (...args: any) => any;

use-composed-refs.ts
     3→import * as React from 'react';
     5→type PossibleRef<T> = React.Ref<T> | undefined;
    11→function setRef<T>(ref: PossibleRef<T>, value: T) {
    23→function composeRefs<T>(...refs: PossibleRef<T>[]) {
    31→function useComposedRefs<T>(...refs: PossibleRef<T>[]) {

use-controllable-state.ts
     3→import React from 'react';
     5→type UseControllableStateParams<T> = {
    11→type SetStateFn<T> = (prevState?: T) => T;
    13→function useCallbackRef …
    24→function useUncontrolledState …
    39→export function useControllableState<T>({ prop, defaultProp, onChange = () => {} }: UseControllableStateParams<T>) {
    40→  const [uncontrolledProp, setUncontrolledProp] = useUncontrolledState({ defaultProp, onChange });
    41→  const isControlled = prop !== undefined;
      →  …

use-position-fixed.ts
     1→import React from 'react';
     2→import { isSafari } from './browser';
     7→ * This hook is necessary to prevent buggy behavior on iOS devices (need to test on Android).
     8→ * I won't get into too much detail about what bugs it solves, but so far I've found that setting the body to `position: fixed` is the most reliable way to prevent those bugs.
     9→ * Issues that this hook solves:
    10→ * https://github.com/emilkowalski/vaul/issues/435
    11→ * https://github.com/emilkowalski/vaul/issues/433
    12→ * And more that I discovered, but were just not reported.
    15→export function usePositionFixed({
    16→  isOpen,
    17→  modal,
    18→  nested,
    19→  hasBeenOpened,
    20→  preventScrollRestoration,
    21→  noBodyStyles,
    22→}: {
    23→  isOpen: boolean;
    24→  modal: boolean;
    25→  nested: boolean;
    26→  hasBeenOpened: boolean;
    27→  preventScrollRestoration: boolean;
    28→  noBodyStyles: boolean;
    29→}) {
    30→  const [activeUrl, setActiveUrl] = React.useState(() => (typeof window !== 'undefined' ? window.location.href : ''));
    31→  const scrollPos = React.useRef(0);
    32→
      →…

use-prevent-scroll.ts
     3→import { useEffect, useLayoutEffect } from 'react';
     4→import { isIOS } from './browser';
     6→const KEYBOARD_BUFFER = 24;
     8→export const useIsomorphicLayoutEffect = typeof window !== 'undefined' ? useLayoutEffect : useEffect;
    10→interface PreventScrollOptions {
    11→  /** Whether the scroll lock is disabled. */
    12→  isDisabled?: boolean;
      →  …
    27→const visualViewport = typeof document !== 'undefined' && window.visualViewport;
    29→export function isScrollable(node: Element): boolean {
    34→export function getScrollParent(node: Element): Element {
    47→const nonTextInputTypes = new Set([
    64→ * Prevents scrolling on the document body on mount, and
    65→ * restores it on unmount. Also ensures that content does not
    66→ * shift due to the scrollbars disappearing.
    68→export function usePreventScroll(options: PreventScrollOptions = {}) {
    69→  let { isDisabled } = options;
    70→
    71→  useIsomorphicLayoutEffect(() => {
    72→    if (isDisabled) {
    73→      return;
    74→    }
    75→
      →…
   294→export function isInput(target: Element) {

use-scale-background.ts
     1→import React, { useMemo } from 'react';
     2→import { useDrawerContext } from './context';
     3→import { assignStyle, chain, isVertical, reset } from './helpers';
     4→import { BORDER_RADIUS, TRANSITIONS, WINDOW_TOP_OFFSET } from './constants';
     6→const noop = () => () => {};
     8→export function useScaleBackground() {

use-snap-points.ts
     1→import React from 'react';
     2→import { set, isVertical } from './helpers';
     3→import { TRANSITIONS, VELOCITY_THRESHOLD } from './constants';
     4→import { useControllableState } from './use-controllable-state';
     5→import { DrawerDirection } from './types';
     7→export function useSnapPoints …
